fix spacing between service badges

--- a/src/common/static/common/site.css
+++ b/src/common/static/common/site.css
@@ -499,6 +499,7 @@ table.table-sm {
   background-color: #4a4d50;
   padding: 5px;
   border-radius: 5px;
+  margin-right: 5px;
 }
 
 .service-app a {
